--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CST Driving — Download</title>
+  <title>CST Driving</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <meta name="description" content="CST Driving — Conduz em Santo Tirso. Download do setup." />
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Ccircle cx='12' cy='12' r='10' fill='%2334d399'/%3E%3Cpath d='M7 14c0-1.657 3-3 5-3s5 1.343 5 3' stroke='%23000' stroke-width='1.2' fill='none' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E" />
@@ -39,7 +39,7 @@
         <h2 class="text-4xl font-extrabold mb-3">Conduz por Santo Tirso — vive as ruas, sente a cidade</h2>
         <p class="text-slate-300 mb-6">CST Driving é um jogo de condução inspirado nas ruas reais de Santo Tirso. 
         Escolhe o teu carro, explora o mapa, completa desafios locais e sente a atmosfera urbana com tráfego simulado e efeitos sonoros imersivos.</p><div class="flex gap-3 flex-wrap">
-      <a id="download" href="/downloads/CSTD_Installer.exe" download class="inline-flex items-center gap-3 px-5 py-3 rounded-xl bg-emerald-400 text-slate-900 font-semibold shadow-lg hover:scale-[1.01] transition"> 
+      <a id="download" href="https://github.com/thomraider12/cstdriving/releases/download/V0.1.0/CSTD_Installer.exe" download class="inline-flex items-center gap-3 px-5 py-3 rounded-xl bg-emerald-400 text-slate-900 font-semibold shadow-lg hover:scale-[1.01] transition"> 
         <!-- ícone do botão -->
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 3v12" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M8 11l4 4 4-4" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><rect x="3" y="17" width="18" height="4" rx="1" stroke="currentColor" stroke-width="1.2"/></svg>
         Baixar setup (Windows)
